--- a/it_projekte/2/index.html
+++ b/it_projekte/2/index.html
@@ -17,13 +17,13 @@
     </head>
 
     <body>
+        <button>Zurücksetzen</button>
         <div style="text-align: center; width: auto">
             <div class="box">1</div>
             <div class="box">2</div>
             <div class="box">3</div>
             <div class="box">4</div>
         </div>
-        
     </body>
 
 </html>
